loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:32: error: not found: value esFaceMur
while(esFaceMur==false){
      ^